--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
         "vue": "^3.2.45"
     },
     "dependencies": {
+        "bootstrap": "^5.2.3",
         "bootstrap-vue": "^2.23.1",
         "vue-datatables-net": "^2.0.1",
-        "vue-good-table": "^2.21.11"
+        "vue-good-table": "^2.21.11",
+        "vuetify": "^3.1.2"
     }
 }
