--- a/package.json
+++ b/package.json
@@ -11,18 +11,26 @@
         "@vue/server-renderer": "^3.2.31",
         "autoprefixer": "^10.4.12",
         "axios": "^1.2.5",
+        "bootstrap-vue": "^2.23.1",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
         "postcss": "^8.4.18",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
-        "vue": "^3.2.45"
+        "vue": "^3.2.45",
+        "vue-good-table": "^2.21.11",
+        "vue-latest-table": "^1.0.5",
+        "vue-table-component": "^1.9.2",
+        "vue3-easy-data-table": "^1.5.27"
+
     },
     "dependencies": {
         "bootstrap": "^5.2.3",
         "bootstrap-vue": "^2.23.1",
         "vue-datatables-net": "^2.0.1",
         "vue-good-table": "^2.21.11",
-        "vuetify": "^3.1.2"
+        "vue-latest-table": "^1.0.5",
+        "vue-table-component": "^1.9.2",
+        "vue3-easy-data-table": "^1.5.27"
     }
 }
